[gd_scene load_steps=5 format=3 uid="uid://dqkp7nlhnb7sh"]

[ext_resource type="Script" uid="uid://bk8qn34w5cqmj" path="res://game/area_map/area_map.gd" id="1_hkcry"]
[ext_resource type="PackedScene" uid="uid://c4l1cv3o25lhv" path="res://game/world/generators/area_generator.tscn" id="2_0o0gd"]
[ext_resource type="PackedScene" uid="uid://b8qwok6v44la" path="res://game/area_map/indicators/current_sector_indicator.tscn" id="2_fx4fd"]
[ext_resource type="PackedScene" uid="uid://bwru7i7xetjth" path="res://game/area_map/indicators/selected_sector_indicator.tscn" id="3_oxnrh"]

[node name="AreaMap" type="Node2D"]
script = ExtResource("1_hkcry")

[node name="Passages" type="Node2D" parent="."]

[node name="Sectors" type="Node2D" parent="."]

[node name="CurrentSectorIndicator" parent="." instance=ExtResource("2_fx4fd")]

[node name="SelectedSectorIndicator" parent="." instance=ExtResource("3_oxnrh")]

[node name="TestAreaGenerator" parent="." instance=ExtResource("2_0o0gd")]

[node name="TestTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="timeout" from="TestTimer" to="." method="_on_test_timer_timeout"]
